--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
+    "react-spring": "^9.7.2",
     "react-toastify": "^9.1.3",
     "scss": "^0.2.4",
+    "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
